# egg

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  counts.html  gencat.cpp  genmf.cpp  ifni-2skymaker.cpp  ifni-gencat.cpp  ifni-genmap.cpp  ifni-genmf.cpp  ifni-gennoise.cpp  ifni.cpp  index.html  make_skymaker.cpp  mass_func_candels.fits  params.json
astrodeep/psfs/: README  herschel-p1-vesta.fits  herschel-p1.fits  herschel-p3-vesta.fits  herschel-s1.fits  herschel-s2.fits  herschel-s3.fits  hubble-f160w.fits  spitzer-irs1.fits
astrodeep/scripts/: make_catalog.sh  make_ir.sh  make_opt.sh
astrodeep/scripts/templates/: hubble-f160w.conf
cmake/: FindCFITSIO.cmake  FindFFTW.cmake  FindGooglePerfTools.cmake  FindLibDwarf.cmake  FindLibUnwind.cmake  FindWCSLib.cmake  Findphypp.cmake  Findvif.cmake
doc/: .gitignore  EGG.tex  axis_ratio.eps  doc-egg-2skymaker.tex  doc-egg-gencat.tex  doc-egg-generic.tex  doc-egg-gennoise.tex  doc-install.tex  doc.tex  ir_flux.eps  ir_pd.eps  mags.eps  report.tex  uvj_gen.eps  uvj_track.eps
doc/scripts/: install.sh
files/: install.sh
share/: ir_lib_cs15.fits  mass_func_candels.fits
share/filter-db/: LICENSE  README.md
share/filter-db/eazy/: 2MASS_H.res.fits  2MASS_J.res.fits  2MASS_K.res.fits  CAPAK_galex1500.res.fits  CAPAK_galex2500.res.fits  CAPAK_v2_flamingos_Ks.res.fits  CAPAK_v2_u_megaprime_sagem.res.fits  COMBO-17.old_epsi_U.dat.fits  COMBO17_C17_420.res.fits  COMBO17_C17_464.res.fits  COMBO17_C17_485.res.fits  COMBO17_C17_518.res.fits  COMBO17_C17_571.res.fits  COMBO17_C17_604.res.fits  COMBO17_C17_646.res.fits  COMBO17_C17_696.res.fits  COMBO17_C17_753.res.fits  COMBO17_C17_815.res.fits  COMBO17_C17_855.res.fits  COMBO17_C17_915.res.fits  COMBO17_C17_B.res.fits  COMBO17_C17_I.res.fits  COMBO17_C17_R.res.fits  COMBO17_C17_U.res.fits  COMBO17_C17_V.res.fits  COSMOS_CFHT_filter_Ks.txt.fits  COSMOS_CFHT_filter_i.txt.fits  COSMOS_CFHT_filter_u.txt.fits  COSMOS_SDSS_filter_g.txt.fits  COSMOS_SDSS_filter_i.txt.fits  COSMOS_SDSS_filter_r.txt.fits  COSMOS_SDSS_filter_u.txt.fits  COSMOS_SDSS_filter_z.txt.fits  COSMOS_SUBARU_filter_B.txt.fits  COSMOS_SUBARU_filter_NB816.txt.fits  COSMOS_SUBARU_filter_V.txt.fits  COSMOS_SUBARU_filter_g.txt.fits  COSMOS_SUBARU_filter_i.txt.fits  COSMOS_SUBARU_filter_r.txt.fits  COSMOS_SUBARU_filter_z.txt.fits  (+206 more)
share/filter-db/haussel/: 2MASS.H.fits  2MASS.J.fits  2MASS.Ks.fits  ACS.f435w.fits  ACS.f555w.fits  ACS.f606w.fits  ACS.f775w.fits  ACS.f814w.fits  ACS.f850lp.fits  AzTEC.AzTEC1.fits  GALEX.FUV.fits  GALEX.NUV.fits  IRAC.IRAC1.fits  IRAC.IRAC2.fits  IRAC.IRAC3.fits  IRAC.IRAC4.fits  IRS.blue.fits  IRS.red.fits  ISOCAM.LW3.fits  LABOCA.LABOCA.fits  MIPS.MIPS160.fits  MIPS.MIPS24.fits  MIPS.MIPS70.fits  MegaCam.gm.fits  MegaCam.im.fits  MegaCam.rm.fits  MegaCam.um.fits  MegaCam.zm.fits  PACS.blue.fits  PACS.green.fits  PACS.red.fits  SDSS.g.fits  SDSS.gp.fits  SDSS.i.fits  SDSS.ip.fits  SDSS.r.fits  SDSS.rp.fits  SDSS.u.fits  SDSS.up.fits  SDSS.z.fits  (+28 more)
share/filter-db/misc/: Buser_V.fits  HAWKI_H.fits  HAWKI_J.fits  HAWKI_Ks.fits  HAWKI_Y.fits  JWST_MIRI.F1000W.fits  JWST_MIRI.F1130W.fits  JWST_MIRI.F1280W.fits  JWST_MIRI.F1500W.fits  JWST_MIRI.F1800W.fits  JWST_MIRI.F2100W.fits  JWST_MIRI.F2550W.fits  JWST_MIRI.F560W.fits  JWST_MIRI.F770W.fits  KPNO_Mosaic_U.fits  LBC_U.fits  LaSilla_WFI.ESO843.V.fits  LaSilla_WFI.ESO844.R.fits  LaSilla_WFI.ESO878.B.fits  LaSilla_WFI.ESO879.I.fits  VLT_VIMOS_U.fits  alma3_3p1.fits  alma4_2p0.fits  alma5_1p5.fits  alma6_1p1.fits  alma6_1p2.fits  alma6_1p3.fits  alma7_0p87.fits  alma7_0p89.fits  alma8_0p73.fits  alma8_0p74.fits  alma9_0p44.fits  iras100.fits  iras12.fits  iras25.fits  iras60.fits  nircam_f070w.fits  nircam_f090w.fits  nircam_f115w.fits  nircam_f140m.fits  (+16 more)
share/psfs/: README  herschel-pacs100-vesta.fits  herschel-pacs100.fits  herschel-pacs160.fits  hst-f435w.fits  hst-f606w.fits  hst-f775w.fits  hst-f850lp.fits  spitzer-irac1.fits  spitzer-irac2.fits  spitzer-irac3.fits  spitzer-irac4.fits  spitzer-mips24.fits
share/skymaker-templates/: goodss-hst-f160w.conf  goodss-hst-f435w.conf  goodss-hst-f850lp.conf  goodss-spitzer-irac2.conf
src/: egg-2skymaker.cpp  egg-buildmf.cpp  egg-gencat.cpp  egg-genmap.cpp  egg-gennoise.cpp  egg-getsed.cpp  egg-postskymaker.cpp  egg-utils.hpp
stylesheets/: styles.css
